--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   This is my first page in Github
   <a href="https://www.w3schools.com">Visit W3Schools </a>
+  <a href="another.html">Another file </a>
 </body>
 
 </html>
