--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   This is my first page in Github
   <a href="https://www.w3schools.com">Visit W3Schools </a>
-  <a href="another.html">Another file </a>
+  <a href="another.html">Another file using vscode</a>
 </body>
 
 </html>
