--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 
   This is my first page in Github
-  <a href="https://www.w3schools.com">Visit W3Schools </a> <br>
+  <a href="https://www.w3schools.com">Visit W3Schools edited </a> <br>
   
   <a href="another.html">Another file using vscode</a>
 </body>
